--- a/backend/package.json
+++ b/backend/package.json
@@ -17,14 +17,19 @@
     "@nestjs/common": "10.0.5",
     "@nestjs/core": "10.0.5",
     "@nestjs/platform-express": "10.0.5",
+    "@nestjs/typeorm": "10.0.0",
+    "express-list-endpoints": "6.0.0",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.8.1"
+    "rxjs": "7.8.1",
+    "sqlite3": "5.1.6",
+    "typeorm": "0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "10.1.4",
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.5",
     "@types/express": "4.17.17",
+    "@types/express-list-endpoints": "6.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.3.3",
     "@types/supertest": "2.0.12",
