--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "@nestjs/common": "10.0.5",
+    "@nestjs/config": "3.0.0",
     "@nestjs/core": "10.0.5",
     "@nestjs/platform-express": "10.0.5",
+    "@nestjs/serve-static": "4.0.0",
     "@nestjs/typeorm": "10.0.0",
     "express-list-endpoints": "6.0.0",
     "reflect-metadata": "0.1.13",
