--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "nest": "nest",
     "start": "node ./dist/main.js",
     "dev": "nest start --debug --watch",
     "build": "nest build",
@@ -16,10 +17,13 @@
     "@nestjs/common": "10.0.5",
     "@nestjs/config": "3.0.0",
     "@nestjs/core": "10.0.5",
+    "@nestjs/passport": "10.0.0",
     "@nestjs/platform-express": "10.0.5",
     "@nestjs/serve-static": "4.0.0",
     "@nestjs/typeorm": "10.0.0",
     "express-list-endpoints": "6.0.0",
+    "passport": "0.6.0",
+    "passport-http": "0.3.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
     "sqlite3": "5.1.6",
@@ -33,6 +37,8 @@
     "@types/express-list-endpoints": "6.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.3.3",
+    "@types/passport": "1.0.12",
+    "@types/passport-http": "0.3.9",
     "@types/supertest": "2.0.12",
     "jest": "29.6.0",
     "source-map-support": "0.5.21",
