--- a/backend/package.json
+++ b/backend/package.json
@@ -17,13 +17,15 @@
     "@nestjs/common": "10.0.5",
     "@nestjs/config": "3.0.0",
     "@nestjs/core": "10.0.5",
+    "@nestjs/jwt": "10.1.0",
     "@nestjs/passport": "10.0.0",
     "@nestjs/platform-express": "10.0.5",
     "@nestjs/serve-static": "4.0.0",
     "@nestjs/typeorm": "10.0.0",
+    "bcryptjs": "2.4.3",
     "express-list-endpoints": "6.0.0",
     "passport": "0.6.0",
-    "passport-http": "0.3.0",
+    "passport-jwt": "4.0.1",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1",
     "sqlite3": "5.1.6",
@@ -33,12 +35,13 @@
     "@nestjs/cli": "10.1.4",
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.5",
+    "@types/bcryptjs": "2.4.2",
     "@types/express": "4.17.17",
     "@types/express-list-endpoints": "6.0.0",
     "@types/jest": "29.5.2",
     "@types/node": "20.3.3",
     "@types/passport": "1.0.12",
-    "@types/passport-http": "0.3.9",
+    "@types/passport-jwt": "3.0.8",
     "@types/supertest": "2.0.12",
     "jest": "29.6.0",
     "source-map-support": "0.5.21",
