--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "3.0.0",
     "@nestjs/common": "10.0.5",
     "@nestjs/config": "3.0.0",
     "@nestjs/core": "10.0.5",
