--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host=0.0.0.0 --disable-host-check --proxy-config=./proxy.conf.json",
+    "dev"  : "npm start",
     "build": "ng build",
     "test": "ng test"
   },
